AM_CPPFLAGS = -I$(top_srcdir)/include

AUTOMAKE_OPTIONS = subdir-objects foreign

bin_PROGRAMS = $(top_builddir)/bin/ryuusi-model/wavesim

__top_builddir__bin_ryuusi_model_wavesim_LDADD = ../../lib/cls/libinstorimono.a ../../lib/conn/signal/libsignalhandle.la
__top_builddir__bin_ryuusi_model_wavesim_SOURCES = wavesim.cc
